--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a class="nav-link" href="biography.html">Biography</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="publications.hhtml">Publications</a>
+        <a class="nav-link" href="publications.html">Publications</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="news.html">News</a>
