--- a/biography.html
+++ b/biography.html
@@ -115,12 +115,12 @@
 
   </style>
   <div class="tab">
-    <button class="tablinks"  onclick="openCity(event, 'Biography')">Biography</button>
+    <button class="tablinks active"  onclick="openCity(event, 'Biography')">Biography</button>
     <button class="tablinks" onclick="openCity(event, 'Akademik Geçmiş')">Akademik Geçmiş</button>
     <button class="tablinks" onclick="openCity(event, 'Awards')">Awards</button>
   </div>
   
-  <div id="Biography" class="tabcontent" style="display:block!important;">
+  <div id="Biography" class="tabcontent active" style="display:block!important;">
     <div class="container">
       <div class="row">
         <div class="col-md-12 mt-5" >
