--- a/biography.html
+++ b/biography.html
@@ -74,7 +74,7 @@
     .tab {
       overflow: hidden;
     border: 1px solid #ccc;
-    width: 20%;
+    width: 72vh;
     position: absolute;
     margin-top: -1%;
     background: white;
@@ -188,7 +188,8 @@
                 </div>
               </div>
             </div>
-          </div>        </div>
+          </div>       
+         </div>
       </div>
     </div>
   </div>
@@ -197,8 +198,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 mt-5">
-          <p>Tokyo is the capital of Japan.</p>
-
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
         </div>
       </div>
     </div>
