--- a/biography.html
+++ b/biography.html
@@ -13,7 +13,7 @@
 </head>
 <section>
   <navbar>
-    <div class="text-center"><img src="images/logo.png" width="184" height="119"></div>
+    <div class="text-center"><a href="/"><img src="images/logo.png" width="184" height="119"></a></div>
     <ul class="nav justify-content-center">
       <li class="nav-item">
         <a class="nav-link" href="biography.html">Biography</a>
