--- a/publications.html
+++ b/publications.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" /></head>
 <section>
   <navbar>
-    <div class="text-center"><img src="images/logo.png" width="184" height="119"></div>
+    <div class="text-center"><a href="/"><img src="images/logo.png" width="184" height="119"></a></div>
     <ul class="nav justify-content-center">
       <li class="nav-item">
         <a class="nav-link" href="biography.html">Biography</a>
