--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Bu düzeneklerdeki bozuklukların hastalık oluşum ve gelişim üzerine etkiler
 Ekibin özgün buluşları, yeni tanı ve takip yöntemleri yanında yüksek teknolojili ilaçlar geliştirmeyi sağlıyor.
           </p>
 
-          <button type="button" class="btn blue-button">Biography ></button>
+         <a href="/biography.html"> type="button" class="btn blue-button">Biography ></button></a>
 
         </div>
         <div class="col">
