--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <p class="desc">
 
 Devrim Gözüaçık ve araştırma grubu, hücresel stres ve otofaji yanıtlarında rol oynayan yeni bileşenler ve moleküler mekanizmalar keşfediyor.
-<p class="desc pt-3">
+<p class="desc">
 Bu düzeneklerdeki bozuklukların hastalık oluşum ve gelişim üzerine etkilerini ortaya çıkarıyorlar.
 Ekibin özgün buluşları, yeni tanı ve takip yöntemleri yanında yüksek teknolojili ilaçlar geliştirmeyi sağlıyor.
           </p>
