--- a/biography.html
+++ b/biography.html
@@ -43,7 +43,7 @@
     <div class="col-md-12 pt-5">
       <h1 class="title">DR. DEVRİM GÖZÜAÇIK
         <br><span style="color:#47A5DC";>MD, PHD</span></h1>
-        <p class="mt-4">Get in contact with Devrim Gözüaçık <span style="color:black;text-decoration: underline;font-weight: 700;">now<img src="images/up-link.png" class="px-3"></span></p>
+        <p class="mt-4">Get in contact with Devrim Gözüaçık <span style="color:black;text-decoration: underline;font-weight: 700;"><a href="contact.html">now</a><img src="images/up-link.png" class="px-3"></span></p>
     </div>
   </div>
 </div>
