--- a/index.html
+++ b/index.html
@@ -140,54 +140,91 @@ Ekibin özgün buluşları, yeni tanı ve takip yöntemleri yanında yüksek tek
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h4><span class="title">Publications Selected</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus</p>
+          <h4>
+            <span class="title">Publications Selected
+          </h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet<br> luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus</p>
         </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6">
-              <div style="padding-bottom:30px;">
-                <span class="number-box" style="float:left;margin-right:24px;">1</span>
-                <p>Hücresel stres ve otofaji yolaklarını düzenleyen yeni<br> moleküllerin ve sinyal yolaklarının keşfi</p>
+          <div class="col-md-6">
+            <div class="bottom-space">
+              <div class="row">
+                <div class="col-md-2">
+                  <span class="number-box-oval" style="float:left;margin-right:24px;">1</span>
+                </div>
+                <div class="col-md-10">
+                  <p>Hücresel stres ve otofaji yolaklarını düzenleyen yeni<br> moleküllerin ve sinyal yolaklarının keşfi</p>
+                  <p>2020</p>
+                  <a href="#" class="nounder-line-a">Open link <img src="images/up-link.png"></a>                
+                </div>
               </div>
-           </div>
-           <div class="col-md-6">
-            <div style="padding-bottom:30px;">
-              <span class="number-box" style="float:left;margin-right:24px;">2</span>
-              <p>Hücresel stres ve otofaji yolaklarını düzenleyen yeni<br> moleküllerin ve sinyal yolaklarının keşfi</p>
-            </div>
-         </div>
-         <div class="col-md-6">
-          <div style="padding-bottom:30px;">
-            <span class="number-box" style="float:left;margin-right:24px;">3</span>
-            <p>Hücresel stres ve otofaji yolaklarını düzenleyen yeni<br> moleküllerin ve sinyal yolaklarının keşfi</p>
+            </div>  
+            <div class="bottom-space">
+              <div class="row">
+                <div class="col-md-2">
+                  <span class="number-box-oval" style="float:left;margin-right:24px;">1</span>
+                </div>
+                <div class="col-md-10">
+                  <p>Hücresel stres ve otofaji yolaklarını düzenleyen yeni<br> moleküllerin ve sinyal yolaklarının keşfi</p>
+                  <p>2020</p>
+                  <a href="#" class="nounder-line-a">Open link <img src="images/up-link.png"></a>                
+                </div>
+              </div>
+            </div> 
+             <div class="bottom-space">
+              <div class="row">
+                <div class="col-md-2">
+                  <span class="number-box-oval" style="float:left;margin-right:24px;">1</span>
+                </div>
+                <div class="col-md-10">
+                  <p>Hücresel stres ve otofaji yolaklarını düzenleyen yeni<br> moleküllerin ve sinyal yolaklarının keşfi</p>
+                  <p>2020</p>
+                  <a href="#" class="nounder-line-a">Open link <img src="images/up-link.png"></a>                
+                </div>
+              </div>
+            </div>         
           </div>
-       </div>
-       <div class="col-md-6">
-        <div style="padding-bottom:30px;">
-          <span class="number-box" style="float:left;margin-right:24px;">4</span>
-          <p>Hücresel stres ve otofaji yolaklarını düzenleyen yeni<br> moleküllerin ve sinyal yolaklarının keşfi</p>
-        </div>
-     </div>
-     <div class="col-md-6">
-      <div style="padding-bottom:30px;">
-        <span class="number-box" style="float:left;margin-right:24px;">5</span>
-        <p>Hücresel stres ve otofaji yolaklarını düzenleyen yeni<br> moleküllerin ve sinyal yolaklarının keşfi</p>
-      </div>
-   </div>
-           <div class="col-md-6">
-            <div style="padding-bottom:30px;">
-              <span class="number-box" style="float:left;margin-right:24px;">6</span>
-              <p>Hücresel stres ve otofaji yolaklarını düzenleyen yeni<br> moleküllerin ve sinyal yolaklarının keşfi</p>
-            </div>
+          <div class="col-md-6">
+            <div class="bottom-space">
+              <div class="row">
+                <div class="col-md-2">
+                  <span class="number-box-oval" style="float:left;margin-right:24px;">1</span>
+                </div>
+                <div class="col-md-10">
+                  <p>Hücresel stres ve otofaji yolaklarını düzenleyen yeni<br> moleküllerin ve sinyal yolaklarının keşfi</p>
+                  <p>2020</p>
+                  <a href="#" class="nounder-line-a">Open link <img src="images/up-link.png"></a>                
+                </div>
+              </div>
+            </div>  
+            <div class="bottom-space">
+              <div class="row">
+                <div class="col-md-2">
+                  <span class="number-box-oval" style="float:left;margin-right:24px;">1</span>
+                </div>
+                <div class="col-md-10">
+                  <p>Hücresel stres ve otofaji yolaklarını düzenleyen yeni<br> moleküllerin ve sinyal yolaklarının keşfi</p>
+                  <p>2020</p>
+                  <a href="#" class="nounder-line-a">Open link <img src="images/up-link.png"></a>                
+                </div>
+              </div>
+            </div>  
+            <div class="bottom-space">
+              <div class="row">
+                <div class="col-md-2">
+                  <span class="number-box-oval" style="float:left;margin-right:24px;">1</span>
+                </div>
+                <div class="col-md-10">
+                  <p>Hücresel stres ve otofaji yolaklarını düzenleyen yeni<br> moleküllerin ve sinyal yolaklarının keşfi</p>
+                  <p>2020</p>
+                  <a href="#" class="nounder-line-a">Open link <img src="images/up-link.png"></a>                
+                </div>
+              </div>
+            </div>  
           </div>
-          </div>
-        
-        </div>
       </div>
     </div>
-    
   </section>
+
   <section class="pt-4">
     <div class="container">
       <h2 class="title">News</h2>
@@ -277,7 +314,7 @@ PCRs, real-time PCRs, flow cytometer, protein array-microarray spotter and scann
           </ul>
         </div>
         <div class="col pt-4">
-          <ul>
+          <ul class="ligray">
             <li>Contact</li>
           </ul>
         </div>
