--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
  
 
   <title>Devrim Gözüaçık</title>
@@ -269,6 +270,80 @@ PCRs, real-time PCRs, flow cytometer, protein array-microarray spotter and scann
 
 
 <footer id="footer" class="mt-5">
+  <div id="footer-content" class="section">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <a id="footer-logo" href="{{ url('/') }}" title="yztd">
+            <img src="images/logo.png">
+        </a>
+        </div>
+        <div class="col-xs-2">
+          <ul class="ligray pt-4">
+            <li>
+              <a href="#!">Biography</a>
+            </li>
+            <li>
+              <a href="#!">Publications</a>
+            </li>
+            <li>
+              <a href="#!">News</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-xs-2">
+          <ul class="ligray pt-4">
+            <li>
+              <a href="#!">Biography</a>
+            </li>
+            <li>
+              <a href="#!">Publications</a>
+            </li>
+            <li>
+              <a href="#!">News</a>
+            </li>
+        </ul>
+        </div>
+        <div class="col">
+          <ul class="ligray pt-4">
+            <li>Contact</li>
+          </ul>
+        </div>
+        <div class="col-md-1"></div>
+        <div class="col-md-3"><h6 class="genpri">Address</h6>
+          <p class="footer-desc">
+              Koç University School of Medicine <br>
+              Department of Medical Biology<br>
+              KUTTAM Research Center for Translational Medicine<br>
+              Koç University Hospital<br>
+              Zeytinburnu 34010, Istanbul, TURKEY
+          </p>
+          <h6 class="genpri">Contact</h6>    
+        </div>
+        <div class="container mb-4">
+          <div class="row">
+            <div class="col">
+              <ul class="social-links">  
+                <li><a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                  <li><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                  <li><a href="https://www.youtube.com/" target="_blank"><i class="fa fa-youtube"></i></a></li>
+                  <li><a href="https://www.instagram.com//" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                  <li><a href="https://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+              </ul>
+            </div>
+            <div class="col-md-6" style="text-align:center;">&copy; 2022 | Koç University</div>
+            <div class="col">
+              <a href="tel:+90 212 467 87 00" class="footer-desc">+90 212 467 87 00</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
+
+<!-- 
+<footer id="footer" class="mt-5">
   <section id="footer-content" class="section">
       <div class="container">
         <div class="row">
@@ -276,15 +351,6 @@ PCRs, real-time PCRs, flow cytometer, protein array-microarray spotter and scann
             <a id="footer-logo" href="{{ url('/') }}" title="yztd">
               <img src="images/logo.png">
           </a>
-          <div class="row">
-            <ul class="social-links">  
-              <li><a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="https://www.youtube.com/" target="_blank"><i class="fa fa-youtube"></i></a></li>
-                <li><a href="https://www.instagram.com//" target="_blank"><i class="fa fa-instagram"></i></a></li>
-                <li><a href="https://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-            </ul>
-          </div>
           </div>
           <div class="col"></div>
           <div class="col pt-4">
@@ -331,16 +397,29 @@ PCRs, real-time PCRs, flow cytometer, protein array-microarray spotter and scann
                     Zeytinburnu 34010, Istanbul, TURKEY
                 </p>
                 <p>
-                    <h6 class="genpri">Contact</h6>
-                    <a href="tel:+90 212 467 87 00" class="footer-desc">+90 212 467 87 00</a>
+                    <h6 class="genpri">Contact</h6>                    
                 </p>
             </div>
+        </div>
+        <div class="container mb-4">
+          <div class="row">
+            <div class="col-md-4">
+              <ul class="social-links">  
+                <li><a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                  <li><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                  <li><a href="https://www.youtube.com/" target="_blank"><i class="fa fa-youtube"></i></a></li>
+                  <li><a href="https://www.instagram.com//" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                  <li><a href="https://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+              </ul>
+            </div>
+            <div class="col-md-4">&copy; 2022 | Koç University</div>
+            <div class="col-md-4"><a href="tel:+90 212 467 87 00" class="footer-desc">+90 212 467 87 00</a></div>
+          </div>
         </div>
       </div>
          
       </div> 
       
   </section>
-</footer>
-
+</footer> -->
 </html>
