home-page-fixed-mobile

--- a/team.html
+++ b/team.html
@@ -41,8 +41,8 @@
 
 <body>
   <div class="container">
-    <div class="row">
-      <h1 class="title pt-3" >Team</h1>
+    <div class="row col-md-12">
+      <h1 class="team-title pt-3">Team</h1>
       <span class="desc">
         Dictum pharetra nec porttitor sapien, commodo nulla scelerisque nulla tellus quam semper ac, iaculis ipsum sit curabitur dictumst amet, interdum dolor nisl dictum facilisi convallis id volutpat.
       </span>
@@ -50,22 +50,24 @@
   </div>
 
 
-  <div class="container pt-5">
+  <div class="container pt-5 bottom-space">
     <div class="row">
       <div class="col-md-3">
-        <img src="images/devrim-gozuacik.png" height="350" width="300">
+        <img src="images/devrim-gozuacik-team.png" height="368" width="362">
       </div>
       <div class="col-md-9 bg-gray">
-        <div class="row ">
-          <h1 class="title float-left ml-4">DR. DEVRİM GÖZÜAÇIK
+        <div class="row ml-4">
+          <h1 class="title team-detail-title mt-4">Devrim Gözüaçık
             <br><span style="color:#47A5DC;">MD, PHD</span>
           </h1>
         </div>
         <div class="row">
-          <p class="ml-4">
-            Sabancı Üniversitesi (SU) Moleküler Biyoloji Genetik ve Biyomühendislik Programı öğretim üyesi Profesör Dr Devrim Gözüaçık, 1971 doğumludur. İzmir Saint-Joseph Fransız Koleji (1986) ve İzmir Atatürk Lisesi’ni (1989) derece ile bitirdi. Hacettepe İngilizce Tıp  Fakültesi’nden (1995) tıp doktoru ünvanı (MD) ile mezun olan Prof. Gözüaçık, Hacettepe Çocuk Hastanesi’nde Genetik Hastalıklar (1990-1995), Hollanda Erasmus Üniversite Hastanesi Kanser Merkezi’nde kan kanseri (lösemi) üzerinde çalışmalar yaptı (1994). Biyokimya Yüksek Lisansı’nı Paris Ecole Polytechnique’den (1997) ve Moleküler Biyoloji ve Kanser Biyolojisi Doktorası’nı Paris Pasteur Enstitüsü ve Paris-Sud Üniversitesi’nden (2001) aldı. Doktora sonrası araştırmalarını Weizmann Bilim Enstitüsü’nde (2001-2006) yaptı. Moleküler tıp araştırmaları ve özellikle kanser, dejeneratif hastalık oluşum mekanizmaları ve programlı hücre ölümü konularında uzmanlaştı. Bilimsel ve akademik çalışmalarını 2006 yılından beri Sabancı Üniversitesi’nde sürdürmektedir. 2018 yılından beri ABD’deki New Mexico Üniversitesi Otofaji, Enflamasyon ve Metabolizma Biyomedikal Araştırma Mükemmeliyet Merkezi‘nin afiliye üyesidir.
-    <br><a  class="under-line-a" href="#">Hakkında daha fazlası...</a>
-          </p>
+          <div class="col-md-12">
+            <p class="team-desc">
+              Sabancı Üniversitesi (SU) Moleküler Biyoloji Genetik ve Biyomühendislik Programı öğretim üyesi Profesör Dr Devrim Gözüaçık, 1971 doğumludur. İzmir Saint-Joseph Fransız Koleji (1986) ve İzmir Atatürk Lisesi’ni (1989) derece ile bitirdi. Hacettepe İngilizce Tıp  Fakültesi’nden (1995) tıp doktoru ünvanı (MD) ile mezun olan Prof. Gözüaçık, Hacettepe Çocuk Hastanesi’nde Genetik Hastalıklar (1990-1995), Hollanda Erasmus Üniversite Hastanesi Kanser Merkezi’nde kan kanseri (lösemi) üzerinde çalışmalar yaptı (1994). Biyokimya Yüksek Lisansı’nı Paris Ecole Polytechnique’den (1997) ve Moleküler Biyoloji ve Kanser Biyolojisi Doktorası’nı Paris Pasteur Enstitüsü ve Paris-Sud Üniversitesi’nden (2001) aldı. Doktora sonrası araştırmalarını Weizmann Bilim Enstitüsü’nde (2001-2006) yaptı. Moleküler tıp araştırmaları ve özellikle kanser, dejeneratif hastalık oluşum mekanizmaları ve programlı hücre ölümü konularında uzmanlaştı. Bilimsel ve akademik çalışmalarını 2006 yılından beri Sabancı Üniversitesi’nde sürdürmektedir. 2018 yılından beri ABD’deki New Mexico Üniversitesi Otofaji, Enflamasyon ve Metabolizma Biyomedikal Araştırma Mükemmeliyet Merkezi‘nin afiliye üyesidir.
+      <br><a  class="under-line-a" href="#">Hakkında daha fazlası...</a>
+            </p>
+          </div>
         </div>
       </div>
     </div>
