--- a/index.html
+++ b/index.html
@@ -75,31 +75,37 @@
             <h1 class="title" style="padding-bottom:25px;"> Research Topics Include</h1>
             <div style="padding-bottom:30px;">
               <span class="number-box" style="float:left;margin-right:24px;">1</span>
-              <p>Hücresel stres ve otofaji yolaklarını düzenleyen yeni <br> moleküllerin ve sinyal yolaklarının keşfi </p>
+              <p>Discovery of new molecules and signaling pathways regulating cellular stress and autophagy pathways</p>
             </div>
             <div style="padding-bottom:30px;">
               <span class="number-box" style="float:left;margin-right:24px;">2</span>
-              <p>Hücresel stres ve otofaji yolaklarını düzenleyen yeni <br> moleküllerin ve sinyal yolaklarının keşfi </p>
+              <p>Investigating the links between autophagy and cancer dormancy, developing new diagnosis and
+                treatment methods against metastatic cancer</p>
             </div>
             <div style="padding-bottom:30px;">
               <span class="number-box" style="float:left;margin-right:24px;">3</span>
-              <p>Hücresel stres ve otofaji yolaklarını düzenleyen yeni <br> moleküllerin ve sinyal yolaklarının keşfi </p>
+              <p>Investigating the roles of small RNAs in cancer and autophagy, developing new RNA-based diagnosis
+                and treatment methods against cancer.</p>
             </div>
             <div style="padding-bottom:30px;">
               <span class="number-box" style="float:left;margin-right:24px;">4</span>
-              <p>Hücresel stres ve otofaji yolaklarını düzenleyen yeni <br> moleküllerin ve sinyal yolaklarının keşfi </p>
+              <p>Developing new biochip-based disease diagnosis and follow-up methods in the light of original
+                discoveries</p>
             </div>
             <div style="padding-bottom:30px;">
               <span class="number-box" style="float:left;margin-right:24px;">5</span>
-              <p>Hücresel stres ve otofaji yolaklarını düzenleyen yeni <br> moleküllerin ve sinyal yolaklarının keşfi </p>
+              <p>Revealing the role of autophagy in cancer stem cells and cancer-stroma relationship, using the
+                inventions for diagnosis and treatment</p>
             </div>
             <div style="padding-bottom:30px;">
               <span class="number-box" style="float:left;margin-right:24px;">6</span>
-              <p>Hücresel stres ve otofaji yolaklarını düzenleyen yeni <br> moleküllerin ve sinyal yolaklarının keşfi </p>
+              <p>Investigating the role of autophagy in immune responses against tumors, developing new immuno-
+                therapeutics</p>
             </div>
             <div style="padding-bottom:30px;">
               <span class="number-box" style="float:left;margin-right:24px;">7</span>
-              <p>Hücresel stres ve otofaji yolaklarını düzenleyen yeni <br> moleküllerin ve sinyal yolaklarının keşfi </p>
+              <p>Development of specific and targeted small molecule, antibodies and nanotechnological drugs against
+                cancer and neurodegenerative diseases.</p>
             </div>
           </div>
           <div class="col-md-6 col-xs-12">
@@ -128,9 +134,8 @@
         <div class="row">
           <div class="col-md-12">
             <h4>
-              <span class="title">Publications Selected
+              <span class="title">Publications Selected</span>
             </h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet <br> luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus </p>
           </div>
           <div class="col-md-6">
             <div class="bottom-space">
