--- a/index.html
+++ b/index.html
@@ -49,8 +49,13 @@
         <div class="row pt-5">
           <div class="col-md-6 col-xs-12 order-xs-last">
             <h1 class="title"> GOZUACIK LAB, CELLULAR <br> STRESS AND DEATH <br>RESPONSES </h1>
-            <p class="desc"> Devrim Gözüaçık ve araştırma grubu, hücresel stres ve otofaji yanıtlarında rol oynayan yeni bileşenler ve moleküler mekanizmalar keşfediyor.
-            <p class="desc"> Bu düzeneklerdeki bozuklukların hastalık oluşum ve gelişim üzerine etkilerini ortaya çıkarıyorlar. Ekibin özgün buluşları, yeni tanı ve takip yöntemleri yanında yüksek teknolojili ilaçlar geliştirmeyi sağlıyor. </p>
+            <p class="desc"> Devrim Gozuacik and his research group are discovering new components and deciphering molecular
+              mechanisms of autophagy which is one of the cellular stress response mechanisms.
+              One of their study objectives to reveal the molecular background of disorders and understand the
+              involvement of these mechanisms on disease formation and development.
+              The team&#39;s original inventions enable the development of high-tech drugs as well as new diagnostic and
+              follow-up methods.</p>
+    
             <a href="/biography.html">
               <button type="button" class="btn blue-button">Biography ></button>
             </a>
@@ -64,7 +69,11 @@
       <div class="container">
         <div class="row ml-2 mr-2">
           <h4 class="title"> Our Research Approach </h4>
-          <p class="our-research-desc"> Laboratuvarda yapılan araştırmalar hücresel stres yanıtları ve otofajiyi düzenleyen yeni RNA'lar, proteinler ve metabolizma ürünleri keşfetmeyi sağlıyor. Ekibin bulduğu özgün moleküllerin ve sinyal yolaklarının nasıl çalıştıkları ortaya konuluyor. Devrim Gözüaçık ve Araştırma Grubu'nun buluşları kanser ve dejeneratif hastalıkların oluşum ve gelişimlerini daha iyi anlamalarını, hastalık tanı, takip ve tedavisi için yeni yaklaşımlar geliştirmelerini sağlıyor. </p>
+          <p class="our-research-desc"> Research in the laboratory enables the discovery of novel RNAs, proteins and metabolic products that
+            regulate cellular stress responses and autophagy. The discoveries of Devrim Gozuacik and his Research
+            Group enable them to better understand the formation and development of cancer and
+            neurodegenerative diseases, and to develop new approaches for disease diagnosis, follow-up and
+            treatment.</p>
         </div>
       </div>
     </section>
