--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h4>
-              <span class="title">Publications Selected</span>
+            <h4 style="padding-bottom:18px!important;">
+              <span class="title" >Publications Selected</span>
             </h4>
           </div>
           <div class="col-md-6">
@@ -152,7 +152,7 @@
                 <div class="col-md-2">
                   <span class="number-box-oval" style="float:left;margin-right:24px;">1</span>
                 </div>
-                <div class="col-md-10" style="padding-bottom:18px;">
+                <div class="col-md-10">
                   <p>Ozturk DG, Kocak M , Akcay A, Kinoglu K, Kara E, Buyuk Y, Kazan H and Gozuacik Dx. MITF/MIR211 axis is a novel autophagy amplifier system during cellular stress. Autophagy, 2018. Oct 5:1-16. doi:10.1080/15548627.2018.1531197. (Impact factor: 11.1. Times cited: 2).</p>
                   <p>2018</p>
                   <a href="https://www.tandfonline.com/doi/full/10.1080/15548627.2018.1531197" class="nounder-line-a">Open link <img src="images/up-link.png">
@@ -165,7 +165,7 @@
                 <div class="col-md-2">
                   <span class="number-box-oval" style="float:left;margin-right:24px;">2</span>
                 </div>
-                <div class="col-md-10" style="padding-bottom:18px;">
+                <div class="col-md-10">
                   <p>Karakas HE*, Kim JY*, Park  J, Oh JM, Choi Y, Gozuacik Dx, Cho YKx. A microfluidic chip for screening individual cancer cells via eavesdropping on autophagy inducing crosstalk in the stroma niche. Scientific Reports, 2017. 7(1):2050. doi: 10.1038/s41598-017-02172-7. (Impact factor: 5.2. Times cited: 8).</p>
                   <p>2017</p>
                   <a href="http://www.nature.com/articles/s41598-017-02172-7" class="nounder-line-a">Open link <img src="images/up-link.png">
@@ -178,7 +178,7 @@
                 <div class="col-md-2">
                   <span class="number-box-oval" style="float:left;margin-right:24px;">3</span>
                 </div>
-                <div class="col-md-10" style="padding-bottom:18px;">
+                <div class="col-md-10">
                   <p>Erbil S, Oral O*, Mitou G*, Cenk Kig, Durmaz-Timucin E, Guven-Maiorov E, Gulacti F, Gokce G, Dengjel J, Sezerman OU, Gozuacik Dx. RACK1 is an Interaction Partner of ATG5 and a Novel Regulator of Autophagy. The Journal of Biological Chemistry (JBC), 2016. 291(32):16753-65. (Impact factor: 4.6. Times cited: 12).</p>
                   <p>2016</p>
                   <a href="http://www.jbc.org/content/291/32/16753.long" class="nounder-line-a">Open link <img src="images/up-link.png">
@@ -193,7 +193,7 @@
                 <div class="col-md-2">
                   <span class="number-box-oval" style="float:left;margin-right:24px;">4</span>
                 </div>
-                <div class="col-md-10" style="padding-bottom:18px;">
+                <div class="col-md-10">
                   <p>Bayraktar O, Oral O*, Kocaturk NM*, Akkoc Y, Eberhart K, Kosar A, Gozuacik Dx. IBMPFD Disease-Causing Mutant VCP/p97 Proteins Are Targets of Autophagic-Lysosomal Degradation. PLoS One, 2016, 11(10): e0164864. doi: 10.1371/journal.pone.0164864. (Impact factor: 4. Times cited: 7).</p>
                   <p>2016</p>
                   <a href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0164864" class="nounder-line-a">Open link <img src="images/up-link.png">
@@ -206,7 +206,7 @@
                 <div class="col-md-2">
                   <span class="number-box-oval" style="float:left;margin-right:24px;">5</span>
                 </div>
-                <div class="col-md-10" style="padding-bottom:18px;">
+                <div class="col-md-10">
                   <p>Tekirdag AK*, Korkmaz G*, Ozturk DG, Agami R, Gozuacik Dx. MIR181A regulates starvation- and rapamycin-induced autophagy through targeting of ATG5. Autophagy, 2013 Mar;9(3):374-85. (Impact factor: 12. Times cited: 105).</p>
                   <p>2013</p>
                   <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3590257/" class="nounder-line-a">Open link <img src="images/up-link.png">
@@ -219,7 +219,7 @@
                 <div class="col-md-2">
                   <span class="number-box-oval" style="float:left;margin-right:24px;">6</span>
                 </div>
-                <div class="col-md-10" style="padding-bottom:18px;">
+                <div class="col-md-10">
                   <p>Korkmaz G*, Tekirdag KA*, Ozturk DG, Kosar A, Sezerman OU and Gozuacik Dx. MIR376A is a regulator of starvation-induced autophagy. PLoS ONE, 2013, 8(12): e82556. doi:10.1371/journal.pone.0082556. (Impact factor: 4. Times cited: 32).</p>
                   <p>2013</p>
                   <a href="http://www.plosone.org/article/fetchObject.action?uri=info%3Adoi%2F10.1371%2Fjournal.pone.0082556&representation=PDF" class="nounder-line-a">Open link <img src="images/up-link.png">
