--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="row pt-5">
           <div class="col-md-6 col-xs-12 order-xs-last">
             <h1 class="title"> GOZUACIK LAB, CELLULAR <br> STRESS AND DEATH <br>RESPONSES </h1>
-            <p class="desc"> Dgevrim Gozuacik and his research group are discovering new components and deciphering molecular
+            <p class="desc"> Devrim Gozuacik and his research group are discovering new components and deciphering molecular
               mechanisms of autophagy which is one of the cellular stress response mechanisms.
               One of their study objectives to reveal the molecular background of disorders and understand the
               involvement of these mechanisms on disease formation and development.
