--- a/index.html
+++ b/index.html
@@ -12,7 +12,46 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Devrim Gözüaçık</title>
   </head>
+
   <section>
+    <nav class="navbar navbar-expand-lg py-3">
+      <a href="#" class="navbar-brand font-weight-bold d-block d-lg-none"><img src="images/logo.png" width="150" height="100"></a>
+      <button type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbars" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </div>
+    <div id="navbarContent" class="collapse navbar-collapse">
+        <div class="text-center">
+          <a href="/">
+            <img src="images/logo.png" width="184" height="119">
+          </a>
+          <ul class="nav justify-content-center">
+            <li class="nav-item">
+              <a class="nav-link" href="biography.html">Biography</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="publications.html">Publications</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="news.html">News</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="intived.html">Invited Talks</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="team.html">Team</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="gallery.html">Gallery</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
+      </div>
+    </nav>
+  </section>
+   <!-- <section>
     <navbar>
       <div class="text-center">
         <a href="/">
@@ -42,7 +81,7 @@
           <a class="nav-link" href="contact.html">Contact</a>
         </li>
       </ul>
-  </section>
+  </section>   -->
   <body class="bg-white">
     <section class="bottom-space" id="one-section">
       <div class="container">
